# megasuper/models/entities/producto.js
@@ -1,44 +1,44 @@
 export class Producto {
-    #id
-    #nombre
-    #precioBase
-    #descripcion
+  #id
+  #nombre
+  #precioBase
+  #descripcion
 
-    constructor(nombre, precioBase, descripcion) {
-        this.#nombre = nombre
-        this.#descripcion = descripcion
-        this.#precioBase = precioBase
-    }
+  constructor(nombre, precioBase, descripcion) {
+    this.#nombre = nombre
+    this.#descripcion = descripcion
+    this.#precioBase = precioBase
+  }
 
-    get nombre() {
-        return this.#nombre
-    }
+  get nombre() {
+    return this.#nombre
+  }
 
-    get precioBase() {
-        return this.#precioBase
-    }
+  get precioBase() {
+    return this.#precioBase
+  }
 
-    get descripcion() {
-        return this.#descripcion
-    }
+  get descripcion() {
+    return this.#descripcion
+  }
 
-    set descripcion(descripcion) {
-        this.#descripcion = descripcion
-    }
+  set descripcion(descripcion) {
+    this.#descripcion = descripcion
+  }
 
-    set nombre(nombre) {
-        this.#nombre = nombre
-    }
+  set nombre(nombre) {
+    this.#nombre = nombre
+  }
 
-    set precioBase(precio) {
-        this.#precioBase = precio
-    }
+  set precioBase(precio) {
+    this.#precioBase = precio
+  }
 
-    set id(id) {
-        this.#id = id
-    }
+  set id(id) {
+    this.#id = id
+  }
 
-    get id() {
-        return this.#id
-    }
+  get id() {
+    return this.#id
+  }
 }
